--- a/Css/Vitrine de Produtos/index.html
+++ b/Css/Vitrine de Produtos/index.html
@@ -13,7 +13,7 @@
 
         <h1 class="nome-loja">Tech4me Confeitaria</h1>
 
-        <a class="vitrine-button" href="../Vitrine/index.html">
+        <a class="vitrine-button" href="./Vitrine/index.html">
             <div class="image-vitrine"></div>
             Ver Vitrine &#x2192;
         </a>
