--- a/Css/Vitrine de Produtos/Vitrine/index.html
+++ b/Css/Vitrine de Produtos/Vitrine/index.html
@@ -12,7 +12,7 @@
 
     <nav class="nav-bar">
 
-        <a href="../Home/index.html" class="home-button">Home</a>
+        <a href="../index.html" class="home-button">Home</a>
         <div class="title-wraper">
             <h1 class="nome-loja">Tech4me Confeitaria</h1>
         </div>
